src2/xlqc-omp_aomp/log_run_bench.err
In file included from ../xlqc-cuda/basis.cc:20:
In file included from /opt/rocm-6.2.0/lib/llvm/lib/clang/18/include/openmp_wrappers/cmath:86:
In file included from /opt/rocm-6.2.0/lib/llvm/lib/clang/18/include/__clang_hip_cmath.h:20:
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/type_traits:2360:21: error: static assertion failed due to requirement '__declval_protector<std::random_access_iterator_tag>::__stop': declval() must not be used!
 2360 |       static_assert(__declval_protector<_Tp>::__stop,
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/type_traits:816:10: note: in instantiation of function template specialization 'std::declval[device={arch(amdgcn)}, implementation={extension(match_any, allow_templates)}]<std::random_access_iterator_tag>' requested here
  816 |     auto declval() noexcept -> decltype(__declval<_Tp>(0));
      |          ^
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/type_traits:1442:46: note: in instantiation of function template specialization 'std::declval<std::random_access_iterator_tag>' requested here
 1442 |                typename = decltype(__test_aux<_To1>(std::declval<_From1>()))>
      |                                                     ^
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/type_traits:1444:2: note: in instantiation of default argument for '__test<std::random_access_iterator_tag, std::input_iterator_tag>' required here
 1444 |         __test(int);
      |         ^~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/type_traits:1451:24: note: while substituting deduced template arguments into function template '__test' [with _From1 = std::random_access_iterator_tag, _To1 = std::input_iterator_tag, $2 = (no value)]
 1451 |       typedef decltype(__test<_From, _To>(0)) type;
      |                        ^
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/type_traits:1458:14: note: in instantiation of template class 'std::__is_convertible_helper<std::random_access_iterator_tag, std::input_iterator_tag>' requested here
 1458 |     : public __is_convertible_helper<_From, _To>::type
      |              ^
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/bits/stl_iterator_base_types.h:250:21: note: in instantiation of template class 'std::is_convertible<std::random_access_iterator_tag, std::input_iterator_tag>' requested here
  250 |       __enable_if_t<is_convertible<__iterator_category_t<_InIter>,
      |                     ^
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/bits/basic_string.h:634:25: note: in instantiation of template type alias '_RequireInputIter' requested here
  634 |                typename = std::_RequireInputIter<_InputIterator>>
      |                                ^
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/bits/basic_string.h:638:9: note: in instantiation of default argument for 'basic_string<char *>' required here
  638 |         basic_string(_InputIterator __beg, _InputIterator __end,
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  639 |                      const _Alloc& __a = _Alloc())
      |                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  640 |         : _M_dataplus(_M_local_data(), __a)
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  641 |         { _M_construct(__beg, __end); }
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/ext/string_conversions.h:115:14: note: while substituting deduced template arguments into function template 'basic_string' [with _InputIterator = char *, $1 = (no value)]
  115 |       return _String(__s, __s + __len);
      |              ^
/usr/lib/gcc/x86_64-redhat-linux/11/../../../../include/c++/11/bits/basic_string.h:6725:23: note: in instantiation of function template specialization '__gnu_cxx::__to_xstring<std::basic_string<char>, char>' requested here
 6725 |     return __gnu_cxx::__to_xstring<string>(&std::vsnprintf, __n,
      |                       ^
1 error generated.
make: *** [Makefile.AMD:65: basis.o] Error 1
